--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reclaimprotocol/js-sdk": "^2.1.1",
+    "connectkit": "^1.8.2",
+    "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.18"
+    "react-qr-code": "^2.0.15",
+    "wagmi": "^2.13.3"
   },
   "devDependencies": {
     "typescript": "^5",
